--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -90,6 +90,26 @@ dependencies:
   flex_color_scheme: ^7.3.1
   flutter_neumorphic: ^3.2.0
   pull_to_refresh: ^2.0.0
+  glassmorphism: ^3.0.0
+  smooth_page_indicator: ^1.2.1
+  flutter_expandable_fab: ^2.5.2
+  dotted_border: ^2.1.0
+  flutter_colorpicker: ^1.1.0
+  flutter_rating_bar: ^4.0.1
+  flutter_switch: ^0.3.2
+  expandable: ^5.0.1
+  flutter_chips_input: ^2.0.0
+  flutter_typeahead: ^5.2.0
+  flutter_datetime_picker: ^1.5.1
+  flutter_mentions: ^2.0.1
+  flutter_tags: ^1.0.0-nullsafety.1
+  searchfield: ^1.2.1
+  multi_select_flutter: ^4.1.3
+  flutter_advanced_switch: ^3.1.0
+  flutter_sticky_header: ^0.7.0
+  flutter_advanced_drawer: ^1.5.0
+  badges: ^3.1.2
+  chips_input: ^0.1.0
 
 dev_dependencies:
   flutter_test:
@@ -118,6 +138,7 @@ flutter:
     - assets/images/
     - assets/icons/
     - assets/animations/
+    - assets/screenshots/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
